added plot w legend, deleted old plot

--- a/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
@@ -2822,7 +2822,7 @@
    "source": [
     "### DAPC\n",
     "\n",
-    "Running in RStudio... R script here.\n",
+    "Running in RStudio... R script [here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Scripts/CRAGIG_RUN1_DAPC_20170322.R).\n",
     "\n",
     "DAPC:\n",
     "\n",
