--- a/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
@@ -2826,7 +2826,14 @@
     "\n",
     "DAPC:\n",
     "\n",
-    "![image]()\n"
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/DAPC_20170322.png?raw=true)\n",
+    "\n",
+    "Where:\n",
+    "- WA1 = Sekiu\n",
+    "- WA2 = San Juans\n",
+    "- WA3 = Dabob\n",
+    "\n",
+    "This DAPC is from after filtering for MAF of .05 across pops, and after filtering for missing values.\n"
    ]
   },
   {
