--- a/CRAGIG_run1/Notebooks/data_processing_notebooks/checking_genotyping_error_mismatch.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing_notebooks/checking_genotyping_error_mismatch.ipynb
@@ -38,25 +38,100 @@
    "source": [
     "I copied and pasted just the rows for the individuals with replicates, into this file 'cragigrun1_sampreps_snps_gen.txt', and it looks like this:\n",
     "\n",
-    "![image]()"
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/pic_samps_for_snp_gen_error.png?raw=true)\n",
+    "\n",
+    "with the rows extracted for samples with replicates, and also with the locus names at the bottom.\n",
+    "\n",
+    "**HOWEVER** To double-check, I'm going to use a test file, which looks like this:\n",
+    "![image]()\n",
+    "so that I can introduce a known amount of error, and see how well it does.\n",
+    "\n",
+    "I introduced the following errors:\n",
+    "* FG101: 1 total mismatch, 1 partial mismatch\n",
+    "* FG102: 2 total mismatches\n",
+    "* FG103: no mismatches\n",
+    "* FG104: 1 total mismatch, 2 partial mismatches"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['FG101_A,', '0000', '0000', '0000', '0303', '0101', '0202', '0202', '0101']\n"
+     ]
+    }
+   ],
+   "source": [
+    "input = open(\"cragigrun1_sampreps_snps_gen.txt\") # read in file\n",
+    "lines = input.readlines()\n",
+    "biglist = []\n",
+    "for line in lines:\n",
+    "    linelist = line.strip().split()\n",
+    "    biglist.append(linelist) # prepare a list to make an array\n",
+    "\n",
+    "# check list of lists is what you expect\n",
+    "print biglist[0][0:9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['5_75', '5_84', '5_137', '6_16', '6_23', '6_24', '6_40', '6_74', '6_97']\n"
+     ]
+    }
+   ],
+   "source": [
+    "headerline = lines[8]\n",
+    "snp_list = headerline.strip().split(\",\")\n",
+    "\n",
+    "print snp_list[0:9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You have 82265 SNPs.\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_snps = len(snp_list) # iterate over number of tags\n",
+    "print \"You have \" + str(num_snps) + \" SNPs.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "input = open(\"cragigrun1_sampreps_snps_gen.txt\")\n",
-    "lines = input.readlines()\n",
-    "biglist = []\n",
-    "for line in lines:\n",
-    "    linelist = line.strip().split()\n",
-    "    biglist.append(linelist)\n",
     "import numpy as np\n",
-    "myarray = np.array(biglist)"
+    "myarray = np.array(biglist) # turn the file into an array"
    ]
   },
   {
@@ -68,18 +143,235 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "FG101 = myarray[0:2]\n",
-    "FG102 = myarray[2:4]\n",
-    "FG103 = myarray[4:6]\n",
-    "FG104 = myarray[6:8]\n",
-    "tags_header = myarray[8]"
+    "FG101 = np.array(biglist[0:2])\n",
+    "FG102 = np.array(biglist[2:4])\n",
+    "FG103 = np.array(biglist[4:6])\n",
+    "FG104 = np.array(biglist[6:8])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Double-check row assignments..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['FG101_A,', '0000', '0000', '0000', '0303', '0101', '0202'],\n",
+       "       ['FG101_B,', '0000', '0000', '0000', '0303', '0101', '0202']], \n",
+       "      dtype='|S8')"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FG101[0:2,0:7]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# put arrays in list\n",
+    "list_of_arrays = []\n",
+    "list_of_arrays.append(FG101)\n",
+    "list_of_arrays.append(FG102)\n",
+    "list_of_arrays.append(FG103)\n",
+    "list_of_arrays.append(FG104)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# initiate counts and lists to track genotyping error\n",
+    "match_genotypes_count = 0\n",
+    "match_genotypes_tags = []\n",
+    "partmismatch_genotypes_count = 0\n",
+    "partmismatch_genotypes_tags = []\n",
+    "totalmismatch_genotypes_count = 0\n",
+    "totalmismatch_genotypes_tags = []\n",
+    "nodata_mismatch_count = 0\n",
+    "nodata_mismatch_tags = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Sample number 1 :\n",
+      "Genotypes with perfect match: 79255 : \n",
+      "Genotypes with partial match: 246 : \n",
+      "Genotypes with total mismatch: 0 : \n",
+      "Genotypes with mismatch due to missing data: 2763 : \n",
+      "\n",
+      "Sample number 2 :\n",
+      "Genotypes with perfect match: 79610 : \n",
+      "Genotypes with partial match: 275 : \n",
+      "Genotypes with total mismatch: 0 : \n",
+      "Genotypes with mismatch due to missing data: 2379 : \n",
+      "\n",
+      "Sample number 3 :\n",
+      "Genotypes with perfect match: 78650 : \n",
+      "Genotypes with partial match: 362 : \n",
+      "Genotypes with total mismatch: 0 : \n",
+      "Genotypes with mismatch due to missing data: 3252 : \n",
+      "\n",
+      "Sample number 4 :\n",
+      "Genotypes with perfect match: 78818 : \n",
+      "Genotypes with partial match: 293 : \n",
+      "Genotypes with total mismatch: 0 : \n",
+      "Genotypes with mismatch due to missing data: 3153 : \n"
+     ]
+    }
+   ],
+   "source": [
+    "# sort genotype match/mismatch by sample\n",
+    "bysam_match_tags = []\n",
+    "bysam_partmismatch_tags = []\n",
+    "bysam_totalmismatch_tags = []\n",
+    "bysam_missing_tags = []\n",
+    "\n",
+    "timescount = 1\n",
+    "for array in list_of_arrays:\n",
+    "    sam_match_genotypes_count = 0\n",
+    "    sam_match_genotypes_tags = []\n",
+    "    sam_partmismatch_genotypes_count = 0\n",
+    "    sam_partmismatch_genotypes_tags = []\n",
+    "    sam_totalmismatch_genotypes_count = 0\n",
+    "    sam_totalmismatch_genotypes_tags = []\n",
+    "    sam_nodata_mismatch_count = 0\n",
+    "    sam_nodata_mismatch_tags = []\n",
+    "    for i in range(1,num_snps):\n",
+    "        A_gen = array[0][i] # get genotypes\n",
+    "        B_gen = array[1][i]\n",
+    "        A_1 = A_gen[0:2] # pull out alleles\n",
+    "        A_2 = A_gen[2:4]\n",
+    "        B_1 = B_gen[0:2]\n",
+    "        B_2 = B_gen[2:4]\n",
+    "        A_list = [] # store alleles in lists\n",
+    "        A_list.append(A_1)\n",
+    "        A_list.append(A_2)\n",
+    "        B_list = []\n",
+    "        B_list.append(B_1)\n",
+    "        B_list.append(B_2)\n",
+    "        first_test_string = B_1 + B_2\n",
+    "        second_test_string = B_2 + B_1\n",
+    "        match_options = []\n",
+    "        match_options.append(first_test_string)\n",
+    "        match_options.append(second_test_string)\n",
+    "        if (A_gen == \"0000\" or B_gen == \"0000\") or (A_gen == \"0000\" and B_gen == \"0000\"):\n",
+    "            nodata_mismatch_count += 1\n",
+    "            nodata_mismatch_tags.append(snp_list[i])\n",
+    "            sam_nodata_mismatch_count +=1\n",
+    "            sam_nodata_mismatch_tags.append(snp_list[i])\n",
+    "        elif A_gen in match_options: # if perfect match\n",
+    "            match_genotypes_count += 1\n",
+    "            match_genotypes_tags.append(snp_list[i])\n",
+    "            sam_match_genotypes_count += 1\n",
+    "            sam_match_genotypes_tags.append(snp_list[i])\n",
+    "        elif A_1 in B_list or A_2 in B_list: # if one allele is a match\n",
+    "            partmismatch_genotypes_count += 1\n",
+    "            partmismatch_genotypes_tags.append(snp_list[i])\n",
+    "            sam_partmismatch_genotypes_count += 1\n",
+    "            sam_partmismatch_genotypes_tags.append(snp_list[i])\n",
+    "        elif A_1 not in B_list or A_2 not in B_list: # if not a match at all\n",
+    "            totalmismatch_genotypes_count += 1\n",
+    "            totalmismatch_genotypes_tags.append(snp_list[i])\n",
+    "            sam_totalmismatch_genotypes_count += 1\n",
+    "            sam_totalmismatch_genotypes_tags.append(snp_list[i])\n",
+    "        else:\n",
+    "            print \"Your loop may not be fully working.\" \n",
+    "            print \"You thought there were three possible options, but there were more than three. Check!\"\n",
+    "        \n",
+    "    bysam_missing_tags.append(sam_nodata_mismatch_tags)\n",
+    "    bysam_match_tags.append(sam_match_genotypes_tags)\n",
+    "    bysam_partmismatch_tags.append(sam_partmismatch_genotypes_tags)\n",
+    "    bysam_totalmismatch_tags.append(sam_totalmismatch_genotypes_tags)\n",
+    "\n",
+    "    print \"\\nSample number \" + str(timescount) + \" :\"\n",
+    "    print \"Genotypes with perfect match: \" + str(sam_match_genotypes_count) + \" : \"\n",
+    "    print \"Genotypes with partial match: \" + str(sam_partmismatch_genotypes_count) + \" : \"\n",
+    "    print \"Genotypes with total mismatch: \" + str(sam_totalmismatch_genotypes_count) + \" : \"\n",
+    "    print \"Genotypes with mismatch due to missing data: \" + str(sam_nodata_mismatch_count) + \" : \"\n",
+    "        \n",
+    "    timescount +=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total genotypes excluding those with missing data : 317509\n",
+      "\n",
+      "Total genotypes with perfect match: 316333 : 99.62%\n",
+      "Total genotypes with partial match: 1176 : 0.370%\n",
+      "Total genotypes with total mismatch: 0 : 0.0%\n",
+      "\n",
+      "Total genotypes with mismatch due to missing data: 11548\n"
+     ]
+    }
+   ],
+   "source": [
+    "from __future__ import division\n",
+    "\n",
+    "total_excl_mv = match_genotypes_count + partmismatch_genotypes_count + totalmismatch_genotypes_count\n",
+    "print \"Total genotypes excluding those with missing data : \" + str(total_excl_mv)\n",
+    "print \"\\nTotal genotypes with perfect match: \" + str(match_genotypes_count) + \" : \" + str((float(match_genotypes_count)/float(total_excl_mv)*100))[0:5] + \"%\"\n",
+    "print \"Total genotypes with partial match: \" + str(partmismatch_genotypes_count) + \" : \" + str((float(partmismatch_genotypes_count)/float(total_excl_mv)*100))[0:5] + \"%\"\n",
+    "print \"Total genotypes with total mismatch: \" + str(totalmismatch_genotypes_count) + \" : \" + str((float(totalmismatch_genotypes_count)/float(total_excl_mv)*100))[0:5] + \"%\"\n",
+    "print \"\\nTotal genotypes with mismatch due to missing data: \" + str(nodata_mismatch_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
