--- a/CRAGIG_run1/Notebooks/data_processing_notebooks/checking_genotyping_error_mismatch.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing_notebooks/checking_genotyping_error_mismatch.ipynb
@@ -689,7 +689,17 @@
     "\n",
     "### haplotypes -> hap Genepop file check\n",
     "\n",
-    "I wrote a script that takes the haplotypes file from ``populations`` and writes a Genepop. I spot checked it, but it could be the source of the problem because people make mistakes (and computers don't!). So double-checking that it worked using a test haplotype file."
+    "I wrote a script that takes the haplotypes file from ``populations`` and writes a Genepop. I spot checked it, but it could be the source of the problem because people make mistakes (and computers don't!). So double-checking that it worked using a test haplotype file.\n",
+    "\n",
+    "I made a test haplotypes file previously, it looks like this:\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/test_hap.png?raw=true)\n",
+    "\n",
+    "So... eyeballing this test haplotypes file, I see:\n",
+    "* Locus 5: 4 alleles\n",
+    "* Locus 6: 2 alleles\n",
+    "* Locus 13: 2 alleles\n",
+    "* Locus 16: 3 alleles\n",
+    "* Locus 20:"
    ]
   },
   {
@@ -720,9 +730,9 @@
    "outputs": [],
    "source": [
     "!python parse_hapfile_to_tagGenePop.py \\\n",
-    "-f ../../../WorkingFolder/Stacks_2/batch_100.haplotypes.tsv \\\n",
+    "-f ../../../WorkingFolder/Stacks_2/test_hap.tsv \\\n",
     "-p ../../../WorkingFolder/popmap_cragigrun1.txt \\\n",
-    "-o ../../../WorkingFolder/Stacks_2/tagsGenepop_20170314.genepop"
+    "-o ../../../WorkingFolder/Stacks_2/tagsGenepop_20170322.genepop"
    ]
   }
  ],
