added img for nb, test hap gp

--- a/CRAGIG_run1/Notebooks/data_processing_notebooks/checking_genotyping_error_mismatch.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing_notebooks/checking_genotyping_error_mismatch.ipynb
@@ -699,7 +699,7 @@
     "* Locus 6: 2 alleles\n",
     "* Locus 13: 2 alleles\n",
     "* Locus 16: 3 alleles\n",
-    "* Locus 20:"
+    "* Locus 20: 5 alleles"
    ]
   },
   {
@@ -723,17 +723,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This script found 1 genotypes to have more than two alleles, and replaced them with missing values, 0000\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python parse_hapfile_to_tagGenePop.py \\\n",
+    "-f ../../../WorkingFolder/Stacks_2/test_hap.tsv \\\n",
+    "-p ../../../WorkingFolder/popmap_cragigrun1.txt \\\n",
+    "-o ../../../WorkingFolder/Stacks_2/tagsGenepop_test_20170322.genepop"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "!python parse_hapfile_to_tagGenePop.py \\\n",
-    "-f ../../../WorkingFolder/Stacks_2/test_hap.tsv \\\n",
-    "-p ../../../WorkingFolder/popmap_cragigrun1.txt \\\n",
-    "-o ../../../WorkingFolder/Stacks_2/tagsGenepop_20170322.genepop"
-   ]
+   "source": []
   }
  ],
  "metadata": {
