--- a/CRAGIG_run1/Notebooks/data_processing_notebooks/checking_genotyping_error_mismatch.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing_notebooks/checking_genotyping_error_mismatch.ipynb
@@ -379,7 +379,7 @@
     "\n",
     "I did find a small indexing problem, and solved it in the code, but unfortunately I don't think it will change the outcome at all for the real file. Well, I'll find out here!\n",
     "\n",
-    "## Now with the actual file!"
+    "### Now with the actual file!"
    ]
   },
   {
@@ -695,11 +695,21 @@
     "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/test_hap.png?raw=true)\n",
     "\n",
     "So... eyeballing this test haplotypes file, I see:\n",
-    "* Locus 5: 4 alleles\n",
-    "* Locus 6: 2 alleles\n",
-    "* Locus 13: 2 alleles\n",
-    "* Locus 16: 3 alleles\n",
-    "* Locus 20: 5 alleles"
+    "* Locus 5: \n",
+    " * 2 alleles (anything w more than two gets tossed out as missing data)\n",
+    " * missing data: last and third to last\n",
+    "* Locus 6: \n",
+    " * 2 alleles\n",
+    " * missing data: seventh and tenth\n",
+    "* Locus 13: \n",
+    " * 2 alleles\n",
+    " * missing data: none\n",
+    "* Locus 16: \n",
+    " * 3 alleles\n",
+    " * missing data: fourth\n",
+    "* Locus 20: \n",
+    " * 5 alleles\n",
+    " * missing data: none"
    ]
   },
   {
@@ -741,6 +751,351 @@
     "-f ../../../WorkingFolder/Stacks_2/test_hap.tsv \\\n",
     "-p ../../../WorkingFolder/popmap_cragigrun1.txt \\\n",
     "-o ../../../WorkingFolder/Stacks_2/tagsGenepop_test_20170322.genepop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This genepop looks like:\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/test_hapgp.png?raw=true)\n",
+    "\n",
+    "**Does it match the allele counts and missing value data, and combinations from above?** Yes!\n",
+    "\n",
+    "I am convinced the error isn't in my parsing a haplotypes file to a Genepop file script. Now to double-check running the above genotyping error calculation code on the haplotypes Genepop file. The file is called 'tagsGenepop_20170314.genepop' and looks like this:\n",
+    "\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/tag_gp.png?raw=true)\n",
+    "\n",
+    "And just the rows of replicates followed by header, looks like this:\n",
+    "![image](\n",
+    "\n",
+    "### Calculating haplotype genotyping error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/mnt/hgfs/SHARED_FOLDER/WorkingFolder/Stacks_2\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd /mnt/hgfs/SHARED_FOLDER/WorkingFolder/Stacks_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['FG101_A,', '0000', '0101', '0505', '0709', '0606', '0303', '0707', '0202']\n"
+     ]
+    }
+   ],
+   "source": [
+    "input = open(\"cragigrun1_reps_genotypes.txt\") # read in file\n",
+    "lines = input.readlines()\n",
+    "biglist = []\n",
+    "for line in lines:\n",
+    "    linelist = line.strip().split()\n",
+    "    biglist.append(linelist) # prepare a list to make an array\n",
+    "\n",
+    "# check list of lists is what you expect\n",
+    "print biglist[0][0:9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['5', '6', '13', '16', '20', '22', '27', '28', '31', '35', '49', '50', '57', '62', '63', '71', '75', '77', '79']\n"
+     ]
+    }
+   ],
+   "source": [
+    "headerline = lines[8]\n",
+    "tag_list = headerline.strip().split(\",\")\n",
+    "\n",
+    "print tag_list[0:19]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You have 7749 RAD tags.\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_tags = len(tag_list) # iterate over number of tags\n",
+    "print \"You have \" + str(num_tags) + \" RAD tags.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "myarray = np.array(biglist) # turn the file into an array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "FG101 = np.array(biglist[0:2])\n",
+    "FG102 = np.array(biglist[2:4])\n",
+    "FG103 = np.array(biglist[4:6])\n",
+    "FG104 = np.array(biglist[6:8])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['FG101_A,', '0000', '0101', '0505', '0709', '0606', '0303'],\n",
+       "       ['FG101_B,', '0303', '0101', '0505', '0707', '0606', '0303']], \n",
+       "      dtype='|S8')"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FG101[0:2,0:7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# put arrays in list\n",
+    "list_of_arrays = []\n",
+    "list_of_arrays.append(FG101)\n",
+    "list_of_arrays.append(FG102)\n",
+    "list_of_arrays.append(FG103)\n",
+    "list_of_arrays.append(FG104)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# initiate counts and lists to track genotyping error\n",
+    "match_genotypes_count = 0\n",
+    "match_genotypes_tags = []\n",
+    "partmismatch_genotypes_count = 0\n",
+    "partmismatch_genotypes_tags = []\n",
+    "totalmismatch_genotypes_count = 0\n",
+    "totalmismatch_genotypes_tags = []\n",
+    "nodata_mismatch_count = 0\n",
+    "nodata_mismatch_tags = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Sample number 1 :\n",
+      "Genotypes with perfect match: 2494 : \n",
+      "Genotypes with partial match: 2507 : \n",
+      "Genotypes with total mismatch: 1769 : \n",
+      "Genotypes with mismatch due to missing data: 979 : \n",
+      "\n",
+      "Sample number 2 :\n",
+      "Genotypes with perfect match: 2509 : \n",
+      "Genotypes with partial match: 2577 : \n",
+      "Genotypes with total mismatch: 1775 : \n",
+      "Genotypes with mismatch due to missing data: 888 : \n",
+      "\n",
+      "Sample number 3 :\n",
+      "Genotypes with perfect match: 2409 : \n",
+      "Genotypes with partial match: 2580 : \n",
+      "Genotypes with total mismatch: 1826 : \n",
+      "Genotypes with mismatch due to missing data: 934 : \n",
+      "\n",
+      "Sample number 4 :\n",
+      "Genotypes with perfect match: 2388 : \n",
+      "Genotypes with partial match: 2554 : \n",
+      "Genotypes with total mismatch: 1769 : \n",
+      "Genotypes with mismatch due to missing data: 1038 : \n"
+     ]
+    }
+   ],
+   "source": [
+    "# sort genotype match/mismatch by sample\n",
+    "bysam_match_tags = []\n",
+    "bysam_partmismatch_tags = []\n",
+    "bysam_totalmismatch_tags = []\n",
+    "bysam_missing_tags = []\n",
+    "\n",
+    "timescount = 1\n",
+    "for array in list_of_arrays:\n",
+    "    sam_match_genotypes_count = 0\n",
+    "    sam_match_genotypes_tags = []\n",
+    "    sam_partmismatch_genotypes_count = 0\n",
+    "    sam_partmismatch_genotypes_tags = []\n",
+    "    sam_totalmismatch_genotypes_count = 0\n",
+    "    sam_totalmismatch_genotypes_tags = []\n",
+    "    sam_nodata_mismatch_count = 0\n",
+    "    sam_nodata_mismatch_tags = []\n",
+    "    for i in range(1,num_tags+1):\n",
+    "        A_gen = array[0][i] # get genotypes\n",
+    "        B_gen = array[1][i]\n",
+    "        A_1 = A_gen[0:2] # pull out alleles\n",
+    "        A_2 = A_gen[2:4]\n",
+    "        B_1 = B_gen[0:2]\n",
+    "        B_2 = B_gen[2:4]\n",
+    "        A_list = [] # store alleles in lists\n",
+    "        A_list.append(A_1)\n",
+    "        A_list.append(A_2)\n",
+    "        B_list = []\n",
+    "        B_list.append(B_1)\n",
+    "        B_list.append(B_2)\n",
+    "        first_test_string = B_1 + B_2\n",
+    "        second_test_string = B_2 + B_1\n",
+    "        match_options = []\n",
+    "        match_options.append(first_test_string)\n",
+    "        match_options.append(second_test_string)\n",
+    "        if (A_gen == \"0000\" or B_gen == \"0000\") or (A_gen == \"0000\" and B_gen == \"0000\"):\n",
+    "            nodata_mismatch_count += 1\n",
+    "            nodata_mismatch_tags.append(tag_list[i-1])\n",
+    "            sam_nodata_mismatch_count +=1\n",
+    "            sam_nodata_mismatch_tags.append(tag_list[i-1])\n",
+    "        elif A_gen in match_options: # if perfect match\n",
+    "            match_genotypes_count += 1\n",
+    "            match_genotypes_tags.append(tag_list[i-1])\n",
+    "            sam_match_genotypes_count += 1\n",
+    "            sam_match_genotypes_tags.append(tag_list[i-1])\n",
+    "        elif A_1 in B_list or A_2 in B_list: # if one allele is a match\n",
+    "            partmismatch_genotypes_count += 1\n",
+    "            partmismatch_genotypes_tags.append(tag_list[i-1])\n",
+    "            sam_partmismatch_genotypes_count += 1\n",
+    "            sam_partmismatch_genotypes_tags.append(tag_list[i-1])\n",
+    "        elif A_1 not in B_list or A_2 not in B_list: # if not a match at all\n",
+    "            totalmismatch_genotypes_count += 1\n",
+    "            totalmismatch_genotypes_tags.append(tag_list[i-1])\n",
+    "            sam_totalmismatch_genotypes_count += 1\n",
+    "            sam_totalmismatch_genotypes_tags.append(tag_list[i-1])\n",
+    "        else:\n",
+    "            print \"Your loop may not be fully working.\" \n",
+    "            print \"You thought there were three possible options, but there were more than three. Check!\"\n",
+    "        \n",
+    "    bysam_missing_tags.append(sam_nodata_mismatch_tags)\n",
+    "    bysam_match_tags.append(sam_match_genotypes_tags)\n",
+    "    bysam_partmismatch_tags.append(sam_partmismatch_genotypes_tags)\n",
+    "    bysam_totalmismatch_tags.append(sam_totalmismatch_genotypes_tags)\n",
+    "\n",
+    "    print \"\\nSample number \" + str(timescount) + \" :\"\n",
+    "    print \"Genotypes with perfect match: \" + str(sam_match_genotypes_count) + \" : \"\n",
+    "    print \"Genotypes with partial match: \" + str(sam_partmismatch_genotypes_count) + \" : \"\n",
+    "    print \"Genotypes with total mismatch: \" + str(sam_totalmismatch_genotypes_count) + \" : \"\n",
+    "    print \"Genotypes with mismatch due to missing data: \" + str(sam_nodata_mismatch_count) + \" : \"\n",
+    "        \n",
+    "    timescount +=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Total genotypes with perfect match: 12294 : 36.23%\n",
+      "Combined (both partial and total) genotyping error: 63.76%\n",
+      "\n",
+      "Total genotypes with partial match: 12725 : 37.50%\n",
+      "Total genotypes with total mismatch: 8908 : 26.25%\n",
+      "Total genotypes with mismatch due to missing data: 4818\n",
+      "Total genotypes excluding those with missing data : 33927\n"
+     ]
+    }
+   ],
+   "source": [
+    "from __future__ import division\n",
+    "\n",
+    "total_excl_mv = match_genotypes_count + partmismatch_genotypes_count + totalmismatch_genotypes_count\n",
+    "\n",
+    "print \"\\nTotal genotypes with perfect match: \" + str(match_genotypes_count) + \" : \" + str((float(match_genotypes_count)/float(total_excl_mv)*100))[0:5] + \"%\"\n",
+    "print \"Combined (both partial and total) genotyping error: \" + str(float(partmismatch_genotypes_count+totalmismatch_genotypes_count)/float(total_excl_mv)*100)[0:5] + \"%\"\n",
+    "print \"\\nTotal genotypes with partial match: \" + str(partmismatch_genotypes_count) + \" : \" + str((float(partmismatch_genotypes_count)/float(total_excl_mv)*100))[0:5] + \"%\"\n",
+    "print \"Total genotypes with total mismatch: \" + str(totalmismatch_genotypes_count) + \" : \" + str((float(totalmismatch_genotypes_count)/float(total_excl_mv)*100))[0:5] + \"%\"\n",
+    "print \"Total genotypes with mismatch due to missing data: \" + str(nodata_mismatch_count)\n",
+    "print \"Total genotypes excluding those with missing data : \" + str(total_excl_mv)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bummer! I was hoping rerunning this would produce a different answer, but it didn't. Looks like this really is the genotyping error at the haplotype level, and that none of my little coding errors caused the problem."
    ]
   },
   {
