--- a/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
@@ -2977,6 +2977,8 @@
    "source": [
     "## Distribution of position of SNP in tag\n",
     "\n",
+    "**20170322**\n",
+    "\n",
     "I just got off the phone with a peer who says that they see a higher abundance of SNPs toward the end of the tag, causing them to believe that Stacks may be calling SNPs that aren't really SNPs, or are poorer quality. This is after they use FASTQC and a quality filter cut off, just like I used. It would be worth it to see the distribution of positin of SNPs in tags. If I see an increase in SNPs towards the end of the read, then I might be interested in excluding these from my haplotype analysis.\n",
     "\n",
     "I just wrote a brief script to plot this distribution from the SNP Genepop file that comes out of ``populations``. Script is [here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Scripts/dist_SNPpos_intags.py)!\n",
@@ -2988,6 +2990,17 @@
     "It doesn't look like there are many more SNPs toward the end of the tag, which doesn't make me feel any more dubious about SNPs later in the tag.\n",
     "\n",
     "This peer also suggested that early in Stacks, the program could be over- or under-clustering loci."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Double-check genotyping error discrepancy\n",
+    "\n",
+    "**20170322**\n",
+    "\n",
+    "I thought it'd be worth double-checking the code and files, and make sure there is indeed this huge discrepancy, which I did in [this notebook](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/data_processing_notebooks/checking_genotyping_error_mismatch.ipynb). I did find a few minor coding errors, but they didn't change the results at all. Bummer!"
    ]
   },
   {
