--- a/CRAGIG_run1/Notebooks/data_processing_notebooks/checking_genotyping_error_mismatch.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing_notebooks/checking_genotyping_error_mismatch.ipynb
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 119,
    "metadata": {
     "collapsed": false
    },
@@ -658,13 +658,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total genotypes excluding those with missing data : 317513\n",
       "\n",
-      "Total genotypes with perfect match: 316337 : 99.62%\n",
-      "Total genotypes with partial match: 1176 : 0.370%\n",
-      "Total genotypes with total mismatch: 0 : 0.0%\n",
+      "Total genotypes with perfect match: 12294 : 36.23%\n",
+      "Combined (both partial and total) genotyping error: 63.76%\n",
       "\n",
-      "Total genotypes with mismatch due to missing data: 11547\n"
+      "Total genotypes with partial match: 12725 : 37.50%\n",
+      "Total genotypes with total mismatch: 8908 : 26.25%\n",
+      "Total genotypes with mismatch due to missing data: 4818\n",
+      "Total genotypes excluding those with missing data : 33927\n"
      ]
     }
    ],
@@ -672,11 +673,13 @@
     "from __future__ import division\n",
     "\n",
     "total_excl_mv = match_genotypes_count + partmismatch_genotypes_count + totalmismatch_genotypes_count\n",
-    "print \"Total genotypes excluding those with missing data : \" + str(total_excl_mv)\n",
+    "\n",
     "print \"\\nTotal genotypes with perfect match: \" + str(match_genotypes_count) + \" : \" + str((float(match_genotypes_count)/float(total_excl_mv)*100))[0:5] + \"%\"\n",
-    "print \"Total genotypes with partial match: \" + str(partmismatch_genotypes_count) + \" : \" + str((float(partmismatch_genotypes_count)/float(total_excl_mv)*100))[0:5] + \"%\"\n",
+    "print \"Combined (both partial and total) genotyping error: \" + str(float(partmismatch_genotypes_count+totalmismatch_genotypes_count)/float(total_excl_mv)*100)[0:5] + \"%\"\n",
+    "print \"\\nTotal genotypes with partial match: \" + str(partmismatch_genotypes_count) + \" : \" + str((float(partmismatch_genotypes_count)/float(total_excl_mv)*100))[0:5] + \"%\"\n",
     "print \"Total genotypes with total mismatch: \" + str(totalmismatch_genotypes_count) + \" : \" + str((float(totalmismatch_genotypes_count)/float(total_excl_mv)*100))[0:5] + \"%\"\n",
-    "print \"\\nTotal genotypes with mismatch due to missing data: \" + str(nodata_mismatch_count)"
+    "print \"Total genotypes with mismatch due to missing data: \" + str(nodata_mismatch_count)\n",
+    "print \"Total genotypes excluding those with missing data : \" + str(total_excl_mv)"
    ]
   },
   {
