--- a/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
@@ -2725,7 +2725,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -2744,7 +2746,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -2769,7 +2773,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Convert back to Genepop"
    ]
@@ -2778,7 +2785,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -2792,7 +2801,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -2818,7 +2829,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### DAPC\n",
     "\n",
@@ -2994,13 +3008,40 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Double-check genotyping error discrepancy\n",
     "\n",
     "**20170322**\n",
     "\n",
     "I thought it'd be worth double-checking the code and files, and make sure there is indeed this huge discrepancy, which I did in [this notebook](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/data_processing_notebooks/checking_genotyping_error_mismatch.ipynb). I did find a few minor coding errors, but they didn't change the results at all. Bummer!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "## Testing downstream effects of different number of allowed mismatches\n",
+    "\n",
+    "**20170323**\n",
+    "\n",
+    "I still haven't resolved why I have this huge SNP and haplotype genotyping error, and several people have suggested that this could be due to the mismatch parameter at the very beginning of the pipeline. So! *Sigh* I'm going to rerun everything with different mismatch parameters, in separate notebooks, and report back here.\n",
+    "\n",
+    "I just wanted to double-check that there's not similar mismatch parameter in ``pstacks`` - and I don't see one on the Stacks website.\n",
+    "\n",
+    "I'm going to make new folders for each number of mismatches. For example, for Stacks files with 6 mismatches, I'll make:\n",
+    "\n",
+    "* Stacks_6m\n",
+    "* Stacks_6m_2\n",
+    "\n",
+    "And that way I can continue working with the same scripts in my Working Folder."
    ]
   },
   {
