updated nb, added img

--- a/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
@@ -2878,6 +2878,10 @@
     "\n",
     "I also made this plot ([notebook here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/data_processing_notebooks/Plot_incidence_genotypes_morethantwoalleles_from_haplotypesfile.ipynb)) to see whether there were few tags that had a ton of genotypes with more than two alleles, expecting to see some pattern supporting paralogous genes. But! I did not, generally, except for this one weird bar of higher values. To be extra clear, frequency here means number of individual genotypes at a tag that had more than two alleles in the genotype (as if polyploid, or paralogous gene).\n",
     "\n",
+    "**20170323**\n",
+    "\n",
+    "Lorenz wanted me to see if there was a relationship between tag ID and read depth at that tag, and I didn't find one. [Notebook here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/data_processing_notebooks/plot_tagID_v_read_depth.ipynb), plot:\n",
+    "\n",
     "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/freq_3ormore_haps_in_genotype_20170315.png?raw=true)\n",
     "\n",
     "So! Next steps after much chatter.\n",
@@ -3048,7 +3052,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
