updated script, added image to notebook

--- a/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
@@ -2892,7 +2892,13 @@
     "**20170323**\n",
     "<br>Also! Lorenz wanted me to see if there was a relationship between tag ID and read depth at that tag, and I didn't find one. [Notebook here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/data_processing_notebooks/plot_tagID_v_read_depth.ipynb), plot:\n",
     "\n",
-    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/tagID_by_readdepthattag_20170323.png?raw=true)"
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/tagID_by_readdepthattag_20170323.png?raw=true)\n",
+    "\n",
+    "While investigating... I also looked at the distribution of read depth at individual loci.\n",
+    "\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/dist_read_depth_ind_tags_20170323.png?raw=true)\n",
+    "\n",
+    "So it looks like the mode read depth is around 125 reads, and that most of the spared is from fairly low (25 reads) up to 200ish reads."
    ]
   },
   {
