--- a/CRAGIG_run1/Notebooks/pipeline_with_mismatch6.ipynb
+++ b/CRAGIG_run1/Notebooks/pipeline_with_mismatch6.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Downstream effect of mismatch parameter 6\n",
     "\n",
@@ -13,14 +16,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### ``ustacks``"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "I used my ``easy_ustacks`` script to run ``ustacks``, but outside of the notebook because it's interactive in the terminal."
    ]
@@ -29,7 +38,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -49,6 +60,8 @@
    "execution_count": 5,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -97,7 +110,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Running easy_ustacks looked like:\n",
     "<br>\n",
@@ -140,12 +156,19 @@
     "  Using a k-mer length of 19\n",
     "  Number of kmers per sequence: 121\n",
     "  Minimum number of k-mers to define a match: 7\n",
-    "Merging stacks, maximum allowed distance: 6 nucleotide(s)``"
+    "Merging stacks, maximum allowed distance: 6 nucleotide(s)``\n",
+    "\n",
+    "\n",
+    "``Running ustacks took \n",
+    "15:56:35.25``\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## ``cstacks``\n",
     "\n",
@@ -167,7 +190,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## ``sstacks``\n",
     "\n",
@@ -188,7 +214,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## ``populations``\n",
     "\n",
@@ -197,14 +226,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Bowtie + BLAST filtering"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": []
   }
  ],
