reorganized misplaced files

--- a/CRAGIG_run1/Notebooks/data_processing_notebooks/pipeline_with_mismatch6.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing_notebooks/pipeline_with_mismatch6.ipynb
@@ -160,7 +160,12 @@
     "\n",
     "\n",
     "``Running ustacks took \n",
-    "15:56:35.25``\n"
+    "15:56:35.25``\n",
+    "\n",
+    "Plot generated:\n",
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/ret_loci_ustacks_20170324.png?raw=true)\n",
+    "\n",
+    "Looks like one sample again had very low retained loci: FG100_A.tags.tsv, only 6, so I'll exclude that from analysis just like the first iteration of the pipeline."
    ]
   },
   {
